--- a/package.json
+++ b/package.json
@@ -10,9 +10,16 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-redux": "^7.1.20",
+    "@types/redux-saga": "^0.10.5",
+    "axios": "^0.24.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
+    "react-saga": "^0.3.1",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.2",
+    "redux-devtools-extension": "^2.13.9",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
